--- a/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
+++ b/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
@@ -952,10 +952,11 @@ set_instance_assignment -name SLEW_RATE 2 -to USER_LED[1]
 set_global_assignment -name STATE_MACHINE_PROCESSING "ONE-HOT"
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
 set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
-set_global_assignment -name VERILOG_FILE BeMicro_MAX10_top.v
-set_global_assignment -name SDC_FILE BeMicro_MAX10_top.sdc
 set_global_assignment -name EXTERNAL_FLASH_FALLBACK_ADDRESS 00000000
 set_global_assignment -name INTERNAL_FLASH_UPDATE_MODE "SINGLE COMP IMAGE WITH ERAM"
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 
 set_global_assignment -name BOARD "Arrow MAX 10 DECA"
+set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/nios_system_sdram.v
+set_global_assignment -name VERILOG_FILE BeMicro_MAX10_top.v
+set_global_assignment -name SDC_FILE BeMicro_MAX10_top.sdc
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
