--- a/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
+++ b/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
@@ -38,7 +38,7 @@
 
 
 set_global_assignment -name FAMILY "MAX 10"
-set_global_assignment -name DEVICE 10M50DAF484C6GES
+set_global_assignment -name DEVICE 10M08DAF484C8GES
 set_global_assignment -name TOP_LEVEL_ENTITY BeMicro_MAX10_top
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 15.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "11:26:27  MARCH 21, 2017"
@@ -955,8 +955,10 @@ set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
 set_global_assignment -name EXTERNAL_FLASH_FALLBACK_ADDRESS 00000000
 set_global_assignment -name INTERNAL_FLASH_UPDATE_MODE "SINGLE COMP IMAGE WITH ERAM"
 
-set_global_assignment -name BOARD "Arrow MAX 10 DECA"
+set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/lfsr.v
 set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/nios_system_sdram.v
 set_global_assignment -name VERILOG_FILE BeMicro_MAX10_top.v
 set_global_assignment -name SDC_FILE BeMicro_MAX10_top.sdc
+set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/sdram_init_reader_writer.v
+set_global_assignment -name QIP_FILE pll_0.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
