--- a/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
+++ b/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
@@ -961,4 +961,7 @@ set_global_assignment -name VERILOG_FILE BeMicro_MAX10_top.v
 set_global_assignment -name SDC_FILE BeMicro_MAX10_top.sdc
 set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/sdram_init_reader_writer.v
 set_global_assignment -name QIP_FILE pll_0.qip
+set_global_assignment -name QIP_FILE pll_1.qip
+set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
+set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
