--- a/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
+++ b/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
@@ -957,16 +957,18 @@ set_global_assignment -name INTERNAL_FLASH_UPDATE_MODE "SINGLE COMP IMAGE WITH E
 
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
+set_global_assignment -name READ_OR_WRITE_IN_BYTE_ADDRESS ON
+set_global_assignment -name QIP_FILE onchip_flash/oc_flash/synthesis/oc_flash.qip
 set_global_assignment -name QIP_FILE pll/pll_1.qip
 set_global_assignment -name QIP_FILE pll/pll_0.qip
 set_global_assignment -name QIP_FILE pic_0_ramrom/pic_0_ram.qip
-set_global_assignment -name QIP_FILE onchip_flash/oc_flash/synthesis/oc_flash.qip
 set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/lfsr.v
 set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/nios_system_sdram.v
 set_global_assignment -name VERILOG_FILE BeMicro_MAX10_top.v
 set_global_assignment -name SDC_FILE BeMicro_MAX10_top.sdc
 set_global_assignment -name VERILOG_FILE ../../rtl/nios_system_sdram_controller/sdram_init_reader_writer.v
 set_global_assignment -name VERILOG_FILE ../../rtl/hdl.verilog.ipcore.pic.risc16f84/risc16f84_clk2x.v
-set_global_assignment -name READ_OR_WRITE_IN_BYTE_ADDRESS ON
 set_global_assignment -name QIP_FILE pic_0_ramrom/pic_0_rom.qip
+set_global_assignment -name QIP_FILE pic_0_ramrom/pic_0_ram_as_rom.qip
+set_global_assignment -name VERILOG_FILE ../../rtl/ufm_rom_shadow_copy/ufm_rom_shadow_copy.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
