--- a/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
+++ b/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
@@ -976,4 +976,5 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+set_global_assignment -name CDF_FILE ../../bin/chain_pof.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
