--- a/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
+++ b/altera/BeMicro_Max10_template/BeMicro_MAX10_top.qsf
@@ -958,6 +958,13 @@ set_global_assignment -name INTERNAL_FLASH_UPDATE_MODE "SINGLE COMP IMAGE WITH E
 set_global_assignment -name VERILOG_INPUT_VERSION SYSTEMVERILOG_2005
 set_global_assignment -name VERILOG_SHOW_LMF_MAPPING_MESSAGES OFF
 set_global_assignment -name READ_OR_WRITE_IN_BYTE_ADDRESS ON
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
+set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
+set_global_assignment -name VERILOG_FILE /media/sf_tmp/altera_fpga_memory_controllers/rtl/hdl.verilog.ipcore.pic.risc16f84/uart/uart_tx.v
+set_global_assignment -name VERILOG_FILE /media/sf_tmp/altera_fpga_memory_controllers/rtl/hdl.verilog.ipcore.pic.risc16f84/uart/uart_rx.v
+set_global_assignment -name VERILOG_FILE /media/sf_tmp/altera_fpga_memory_controllers/rtl/hdl.verilog.ipcore.pic.risc16f84/uart/uart.v
 set_global_assignment -name QIP_FILE onchip_flash/oc_flash/synthesis/oc_flash.qip
 set_global_assignment -name QIP_FILE pll/pll_1.qip
 set_global_assignment -name QIP_FILE pll/pll_0.qip
@@ -971,10 +978,5 @@ set_global_assignment -name VERILOG_FILE ../../rtl/hdl.verilog.ipcore.pic.risc16
 set_global_assignment -name QIP_FILE pic_0_ramrom/pic_0_rom.qip
 set_global_assignment -name QIP_FILE pic_0_ramrom/pic_0_ram_as_rom.qip
 set_global_assignment -name VERILOG_FILE ../../rtl/ufm_rom_shadow_copy/ufm_rom_shadow_copy.v
-set_global_assignment -name CDF_FILE /media/sf_tmp/altera_fpga_memory_controllers/altera/BeMicro_Max10_template/output_files/Chain2.cdf
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
 set_global_assignment -name CDF_FILE ../../bin/chain_pof.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
